--- a/impalacabo.com/index.html
+++ b/impalacabo.com/index.html
@@ -265,7 +265,7 @@
       <div style="padding: 1em 0px;">
         <div class="footer-title">Follow us
           <a href="https://www.facebook.com/ImpalaGroundServices" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/impala_cabo" target="_blank" class="social-icon"><i class="fab fa-twitter"></i></a>
+          <a href="https://x.com/impala_cabo" target="_blank" class="social-icon"><i class="fab fa-x"></i></a>
           <a href="https://www.instagram.com/impalacabo/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
